--- a/su_platform.html
+++ b/su_platform.html
@@ -248,15 +248,15 @@
                                 <button class="sn-ld-btn download js_location_url" data-url="picked_5_download">点击下载</button>
                             </div>
                         </li>
-                        <li>
-                            <p class="sn-ld-title">蓝牙版产品所有资源</p>
-                            <p class="sn-ld-desc">
-                                文件内容包括：适用于Windows系统的开发包、手机Android系统及IOS系统的三种类型开发包、相关工具及说明文档。
-                            </p>
-                            <div class="sn-ld-btn-list">
-                                <button class="sn-ld-btn download js_location_url" data-url="picked_5_bt_download">点击下载</button>
-                            </div>
-                        </li>
+                        <!--<li>-->
+                            <!--<p class="sn-ld-title">蓝牙版产品所有资源</p>-->
+                            <!--<p class="sn-ld-desc">-->
+                                <!--文件内容包括：适用于Windows系统的开发包、手机Android系统及IOS系统的三种类型开发包、相关工具及说明文档。-->
+                            <!--</p>-->
+                            <!--<div class="sn-ld-btn-list">-->
+                                <!--<button class="sn-ld-btn download js_location_url" data-url="picked_5_bt_download">点击下载</button>-->
+                            <!--</div>-->
+                        <!--</li>-->
                     </ul>
                 </div>
                 <div id="tab_4" class="sn-tab-pane ">
