--- a/lock_jr5_std.html
+++ b/lock_jr5_std.html
@@ -45,9 +45,9 @@
                 <li class="">
                     <a data-id="#tab_4" href="javascript:void (0);" >SDK下载</a>
                 </li>
-                <li class="">
-                    <a  href="javascript:void (0);" >进入商城</a>
-                </li>
+                <!--<li class="">-->
+                    <!--<a  href="javascript:void (0);" >进入商城</a>-->
+                <!--</li>-->
             </ul>
         </div>
     </section>
