--- a/su_platform.html
+++ b/su_platform.html
@@ -43,9 +43,9 @@
                 <li class="">
                     <a data-id="#tab_3" href="javascript:void (0);" >下载中心</a>
                 </li>
-                <li class="">
-                    <a data-id="#tab_4" href="javascript:void (0);" >常见问题</a>
-                </li>
+                <!--<li class="">-->
+                    <!--<a data-id="#tab_4" href="javascript:void (0);" >常见问题</a>-->
+                <!--</li>-->
             </ul>
         </div>
     </section>
