--- a/download_4s.html
+++ b/download_4s.html
@@ -40,7 +40,7 @@
                         <li>
                             <p class="sn-ld-title">标准版/精灵版/U盘版产品所有资源</p>
                             <p class="sn-ld-desc">
-                                SDK下载文件内容包括：快速入门、开发指南、函数参考、Delphi应用范例集及发行说明文档。
+                                SDK下载文件内容包括：驱动安装包、开发包、u盘锁开发包、开发测试工具、设备检测工具、及各类说明文档。
                                 请点击“SDK下载”，选择“目标另存为”或者使用下载软件下载至本地文件夹，解压缩后即可，使用前请先仔细阅读说明文档。
                             </p>
                             <div class="sn-ld-btn-list">
