--- a/header.html
+++ b/header.html
@@ -132,7 +132,7 @@
             <div class="bg-slide" ></div>
         </div>
         <div class="action fr">
-            <a class="sn-login " href="http://developer.senseshield.com/auth/">云帐号登录</a>
+            <a class="sn-login " target="_blank" href="http://developer.senseshield.com/auth/">云帐号登录</a>
         </div>
     </div>
 </div>
