--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@
             <li><a class="info "   href="platform_intro.html">了解云授权平台</a></li>
             <li><a class="info "   href="cloud_lock.html">云锁服务</a></li>
             <li><a class="info "   href="ss_service.html">SS安全服务</a></li>
-            <li><a class="info "   href="http://developer.senseshield.com/auth/register.jsp">云帐号注册</a></li>
+            <li><a class="info " href="http://developer.senseshield.com/auth/register.jsp" target="_blank" >云帐号注册</a></li>
         </ul>
 
         <ul class="sn-sm-item">
