--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
 <!--公共header-->
 <div class="bg-white  sn-header text-left">
     <div class="wrap clear-fix">
-        <a href="index.html" class="logo_a">
+        <a href="javascript:void (0);" onclick="window.location.href = '';" class="logo_a">
             <div class="logo fl ">
                 <img src="images/logo/logo.png">
                 <div class="logo-txt">
@@ -17,7 +17,7 @@
         <div class="menu fl" >
             <div class="">
                 <a href="javascript:void(0);"  >云授权</a>
-                <div class="sub-menu-group  ">
+                <div class="sub-menu-group ">
                     <ul class="sub-menu-item clear-fix">
                         <li class="disabled">
                             <a class="text-center color-blue">
