--- a/lock_jr4s_net.html
+++ b/lock_jr4s_net.html
@@ -118,7 +118,7 @@
                         <li>
                             <p class="sn-ld-title">网络版产品所有文档</p>
                             <p class="sn-ld-desc">
-                                资源包内容包括：快开发指南、发行说明。
+                                资源包内容包括：快速开发指南、发行说明。
                             </p>
                             <div class="sn-ld-btn-list">
                                 <button class="sn-ld-btn download js_location_url" data-url="picked_4s_net_sdk_download">SDK下载</button>
