--- a/download.html
+++ b/download.html
@@ -41,7 +41,7 @@
                     <p class="sn-ld-section-title color-blue bolder">精锐5</p>
                     <ul>
                         <li>
-                            <p class="sn-ld-title">标准版/U盘版/网络版产品所有资源</p>
+                            <p class="sn-ld-title">标准版/网络版产品所有资源</p>
                             <p class="sn-ld-desc">
                                 SS客户端安装包（sense_shield_installer_pub.exe）BuildVersion 8915 是深思精锐5加密锁客户端程序，主要包括：精锐5产品驱动程序、网络锁驱动程序、SS服务主程序、许可管理工具、界面服务程序及CSP模块。
                             </p>
@@ -95,7 +95,7 @@
                         <li>
                             <p class="sn-ld-title">网络版产品所有文档</p>
                             <p class="sn-ld-desc">
-                                资源包内容包括：快开发指南、发行说明。
+                                资源包内容包括：快速开发指南、发行说明。
                             </p>
                             <div class="sn-ld-btn-list">
                                 <button class="sn-ld-btn download js_location_url" data-url="picked_4s_net_sdk_download">SDK下载</button>
