--- a/lock_jr5_bt.html
+++ b/lock_jr5_bt.html
@@ -24,8 +24,9 @@
             <span><a class="js_location_url" data-url="locks" href="javascript:void(0);">硬件加密锁</a></span>   <span>></span>
             <span>精锐5</span>   <span>></span>
             <span><a class="js_location_url" data-url="picked_5" href="javascript:void(0);">标准版</a></span> <span>|</span>
-            <span  class="active" >蓝牙版</span> <span>|</span>
-            <span><a class="js_location_url" data-url="picked_5_usb" href="javascript:void(0);">U盘版</a></span>
+            <span  class="active" >蓝牙版</span>
+            <!--<span>|</span>-->
+            <!--<span><a class="js_location_url" data-url="picked_5_usb" href="javascript:void(0);">U盘版</a></span>-->
         </div>
     </section>
 
