--- a/lock_jr5_std.html
+++ b/lock_jr5_std.html
@@ -23,8 +23,9 @@
             <span><a class="js_location_url" data-url="locks" href="javascript:void(0);">硬件加密锁</a></span>   <span>></span>
             <span>精锐5</span>   <span>></span>
             <span  class="active" >标准版</span> <span>|</span>
-            <span><a class="js_location_url" data-url="picked_5_bt" href="javascript:void(0);">蓝牙版</a></span> <span>|</span>
-            <span><a class="js_location_url" data-url="picked_5_usb" href="javascript:void(0);">U盘版</a></span>
+            <span><a class="js_location_url" data-url="picked_5_bt" href="javascript:void(0);">蓝牙版</a></span>
+            <!--<span>|</span>-->
+            <!--<span><a class="js_location_url" data-url="picked_5_usb" href="javascript:void(0);">U盘版</a></span>-->
         </div>
     </section>
 
@@ -168,7 +169,7 @@
                     <p class="sn-ld-section-title">相关下载</p>
                     <ul>
                         <li>
-                            <p class="sn-ld-title">标准版/U盘版/网络版产品所有资源</p>
+                            <p class="sn-ld-title">标准版/网络版产品所有资源</p>
                             <p class="sn-ld-desc">
                                 SS客户端安装包（sense_shield_installer_pub.exe）是深思精锐5加密锁客户端程序主要包括：精锐5产品驱动程序、网络锁驱动程序、SS服务主程序、许可管理工具、界面服务程序及CSP模块。
                             </p>
